<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- App bar -->
        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/topBar"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            app:constraint_referenced_ids="textConsumedInfo,textProductionInfo,flowLocales,flowConsumed,flowProduction,buttonRefresh"
            app:flow_maxElementsWrap="3"
            app:flow_horizontalGap="10dp"
            app:flow_verticalGap="5dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textConsumedInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.28"
            app:layout_constraintWidth_max="120dp"
            android:text="@string/currentConsumedInfo"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textProductionInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.28"
            app:layout_constraintWidth_max="120dp"
            android:text="@string/currentProductionInfo"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowLocales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flow_horizontalGap="10dp"
            app:constraint_referenced_ids="buttonLocaleGb,buttonLocaleFi" />

        <ImageButton
            android:id="@+id/buttonLocaleGb"
            android:layout_width="28dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1.6:1"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/gb"
            android:contentDescription="@string/changeLocaleGb" />

        <ImageButton
            android:id="@+id/buttonLocaleFi"
            android:layout_width="28dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1.6:1"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/fi"
            android:contentDescription="@string/changeLocaleFi" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowConsumed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.28"
            app:layout_constraintWidth_max="120dp"
            app:flow_horizontalGap="5dp"
            app:constraint_referenced_ids="textConsumedValue,textConsumedValueUnit" />

        <TextView
            android:id="@+id/textConsumedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textColor="@color/consumedEmissions"
            android:text="@string/currentEmissionValue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textConsumedValueUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/emissionUnit"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowProduction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.28"
            app:layout_constraintWidth_max="120dp"
            app:flow_horizontalGap="5dp"
            app:constraint_referenced_ids="textProductionValue,textProductionValueUnit"
            />

        <TextView
            android:id="@+id/textProductionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textColor="@color/productionEmissions"
            android:text="@string/currentEmissionValue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textProductionValueUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/emissionUnit"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.20"
            app:layout_constraintWidth_max="120dp"
            android:text="@string/unknownTime"
            android:textAllCaps="false"
            style="@style/AppButtonTheme" />

        <!-- Fixed date buttons -->
        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowFixedDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/flowAppBar"
            app:layout_constraintStart_toStartOf="@id/flowAppBar"
            app:flow_horizontalGap="5dp"
            app:flow_verticalGap="5dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="buttonFixedToday,buttonFixed3days,buttonFixed7days,buttonFixed14days,buttonFixed30days,buttonFixed90days" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFixedToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixedDateToday"
            style="@style/AppButtonTheme" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFixed3days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixedDate3days"
            style="@style/AppButtonTheme" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFixed7days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixedDate7days"
            style="@style/AppButtonTheme" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFixed14days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixedDate14days"
            style="@style/AppButtonTheme" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFixed30days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixedDate30days"
            style="@style/AppButtonTheme" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFixed90days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixedDate3months"
            style="@style/AppButtonTheme" />

        <!-- Date pickers -->
        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowDatePickers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/flowFixedDates"
            app:layout_constraintStart_toStartOf="@id/flowAppBar"
            app:flow_horizontalGap="5dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="textDatePickers,buttonStartDate,textDatePickersDash,buttonEndDate" />

        <TextView
            android:id="@+id/textDatePickers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/chooseCustomDate"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownTime"
            style="@style/AppButtonTheme" />

        <TextView
            android:id="@+id/textDatePickersDash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateDash" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknownTime"
            style="@style/AppButtonTheme" />

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone"
            android:text=""
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/consumedEmissions"
            app:layout_constraintTop_toBottomOf="@id/flowDatePickers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Chart -->
        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowChart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintTop_toBottomOf="@id/textError"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:flow_horizontalGap="5dp"
            app:flow_horizontalStyle="packed"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="graphChartLeftYLegend,graphChart,graphChartRightYLegend" />

        <com.roopeh.electricemissions.VerticalTextView
            android:id="@+id/graphChartLeftYLegend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="bottom"
            android:textSize="11sp"
            android:text="@string/emissionUnit" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graphChart"
            android:layout_width="0dp"
            android:layout_height="200dp" />

        <com.roopeh.electricemissions.VerticalTextView
            android:id="@+id/graphChartRightYLegend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="top"
            android:textSize="11sp"
            android:text="@string/emissionUnit" />

        <!-- Footer -->
        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:background="@color/footer"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/flowChart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:flow_verticalGap="10dp"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="textFooterHeader,textFooter1,textFooter2,textFooter3,textFooter4" />

        <TextView
            android:id="@+id/textFooterHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.85"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/footerTitle" />
        <TextView
            android:id="@+id/textFooter1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.8"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/footerPar1" />
        <TextView
            android:id="@+id/textFooter2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.8"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/footerPar2" />
        <TextView
            android:id="@+id/textFooter3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.8"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/footerPar3" />
        <TextView
            android:id="@+id/textFooter4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.8"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/footerPar4" />
        <!-- Filler layout -->
        <RelativeLayout
            android:id="@+id/fillerFooter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/footer"
            app:layout_constraintTop_toBottomOf="@id/flowFooter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
